alteração do nome do arquivo.

--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+segui
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +15,7 @@
     <img src="img/logo.svg" alt="MusicDot">
 
     <h1> Sobre a empresa</h1>
+
 
     <p>
         A MusicDot é a maior escola online de música em todo o mundo.Fundada em 1932, possui estúdios em 124 paises,sendo liderde mercadocom mais de 90% de participação em 118 deles.
