inerção do index.html

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ segui
     </p>
 
     <p>
-        Nossa matriz fica op
+        Nossa matriz fica oi sou zica
     </p>
 </body>
 
-</html>
+</html
