--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ segui
     </p>
 
     <p>
-        Nossa matriz fica oi sou zica Nossa matriz fica oi
+        Nossa matriz fica oi sou zica Nossa matriz fica oi...
     </p>
 </body>
+
 
 </html
