mais teste de ex portação

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ segui
     </p>
 
     <p>
-        Nossa matriz fica oi sou zica Nossa matriz fica oi...Editandocada vez mais.
+        Nossa matriz fica oi sou zica Nossa matriz fica oi...Editando cada vez mais
     </p>
 </body>
 
